refactor(user) : wallet 관계 적용 및 import 최적화