@@ -1,11 +1,11 @@
-package com.tasksprints.auction.domain.user.service;
+package com.tasksprints.auction.user.application.service;
 
-import com.tasksprints.auction.domain.user.dto.request.UserRequest;
-import com.tasksprints.auction.domain.user.dto.response.UserDetailResponse;
-import com.tasksprints.auction.domain.user.dto.response.UserSummaryResponse;
-import com.tasksprints.auction.domain.user.exception.UserNotFoundException;
-import com.tasksprints.auction.domain.user.model.User;
-import com.tasksprints.auction.domain.user.repository.UserRepository;
+import com.tasksprints.auction.user.domain.dto.request.UserRequest;
+import com.tasksprints.auction.user.domain.dto.response.UserDetailResponse;
+import com.tasksprints.auction.user.domain.dto.response.UserSummaryResponse;
+import com.tasksprints.auction.user.domain.entity.User;
+import com.tasksprints.auction.user.exception.UserNotFoundException;
+import com.tasksprints.auction.user.infrastructure.UserRepository;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
@@ -38,7 +38,7 @@ public class UserServiceImpl implements UserService {
         List<User> foundUsers = userRepository.findAll();
         return foundUsers.stream()
             .map(UserSummaryResponse::new)
-            .collect(Collectors.toList());
+            .toList();
     }
 
     @Override
